updated endpoint getArchivedDeliveries